correctly aligns setup page

--- a/css/style.css
+++ b/css/style.css
@@ -741,7 +741,7 @@ font-size: 0.8rem;
   display: inline-block;
   vertical-align: text-top;
   margin-right: 0.5rem;
-  max-width: 30rem;
+  width: 29rem;
 }
 
 #setup-page h2 {
